# jd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  tests.yml
src/: main.rs
src/cli/: addurl.rs  alloc.rs  cat_rename.rs  categories.rs  config.rs  init.rs  json.rs  locate.rs  ls.rs  mkarea.rs  mkcat.rs  mod.rs  mv.rs  open.rs  relocate.rs  rename.rs  rm.rs  search.rs  validate.rs
src/johnny/: client.rs  config.rs  index.rs  item.rs  lib.rs  mapping.rs
src/johnny/resolver/: disk.rs  github.rs  menmos.rs  mod.rs
src/johnny/resolver/menmos/: mod.rs  resolver.rs  util.rs
