[package]
name = "jd"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "johnny"
path = "src/johnny/lib.rs"

[[bin]]
name = "jd"
path = "src/main.rs"


[dependencies]
anyhow = "1"
cfgloader = "0.1.1"
clap = "3.0.0-beta.2"
dirs = "4"
fs_extra = "1.2"
lazy_static = "1.4"
open = "2"
rayon = "1.5"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"
