[package]
name = "jd"
version = "0.2.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "johnny"
path = "src/johnny/lib.rs"

[[bin]]
name = "jd"
path = "src/main.rs"


[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bunt = "0.2.6"
bytes = "1"
cfgloader = "0.1.1"
clap = {version = "3", features = ["derive"]}
dirs = "4"
futures = "0.3"
fs_extra = "1.2"
lazy_static = "1.4"
menmos-client = "0.0.10"
open = "2"
rayon = "1.5"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"
